--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "vite build",
     "preview": "vite preview",
     "lint": "eslint .",
+    "lint:css": "stylelint \"src/**/*.css\"",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist"
   },
@@ -42,6 +43,8 @@
     "eslint-plugin-react-refresh": "^0.4.11",
     "globals": "^15.9.0",
     "postcss": "^8.4.47",
+    "stylelint": "^16.24.0",
+    "stylelint-config-standard": "^39.0.0",
     "tailwindcss": "^3.4.13",
     "typescript": "^5.6.3",
     "typescript-eslint": "^8.3.0",
