--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "lint": "eslint .",
     "lint:css": "stylelint \"src/**/*.css\"",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d dist",
+    "generate:sitemap": "node scripts/generate-sitemap.js",
+    "prebuild": "npm run generate:sitemap",
+    "seo:audit": "echo 'Run lighthouse audit: npx lighthouse https://www.rahmatez.me/ --output=html --output-path=./lighthouse-report.html'",
+    "seo:validate": "echo 'Validate structured data at: https://search.google.com/test/rich-results'"
   },
   "dependencies": {
     "@formspree/react": "^2.5.1",
@@ -25,6 +29,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-github-calendar": "^4.5.5",
+    "react-helmet-async": "^2.0.5",
     "react-icons": "^5.4.0",
     "react-pdf": "^6.2.2",
     "react-router-dom": "^7.9.1",
@@ -46,6 +51,7 @@
     "stylelint": "^16.24.0",
     "stylelint-config-standard": "^39.0.0",
     "tailwindcss": "^3.4.13",
+    "terser": "^5.44.0",
     "typescript": "^5.6.3",
     "typescript-eslint": "^8.3.0",
     "vite": "^6.2.5"
